# ad-management-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SMB뷰티-buzzvil-proposal.html  buzzvil_adcenter_dashboard.html  duckdb-init.sql  index.html  pyproject.toml  다칸토-buzzvil-proposal.html  우체국쇼핑-buzzvil-proposal.html
.claude/: settings.json
.claude/skills/adcenter-weekly/: SKILL.md  keywords.json
.claude/skills/argo-workflows-manage/: SKILL.md
.claude/skills/argocd-manage/: SKILL.md
.claude/skills/aws-manage/: SKILL.md
.claude/skills/dash-manage/: SKILL.md
.claude/skills/github-manage/: SKILL.md
.claude/skills/gitploy-manage/: SKILL.md
.claude/skills/grafana-manage/: SKILL.md
.claude/skills/open-pencil-manage/: SKILL.md
.claude/skills/penpot-manage/: SKILL.md
.claude/skills/redash-manage/: SKILL.md
.claude/skills/sentry-fix/: SKILL.md
.claude/skills/slack-manage/: SKILL.md
.claude/skills/slack-summary/: SKILL.md
.claude/skills/teleport-manage/: SKILL.md
.github/workflows/: adcenter-weekly.yml
adm/cmd/: create_contacts.py  gsheet.py  settlement.py  settlement_opportunity.py
adm/lib/: docx_utils.py  gdrive.py
scripts/: adcenter_weekly.py  get_gmail_token.py  requirements.txt
team/: README.md
team/david/: README.md
team/docs/: FE_DEV_GUIDE.md  README.md  REPORT_AD_PRICING_FLOW.md
team/elle/: README.md
team/frank/: README.md
team/jetty/: README.md
